# libcrypto-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
include/: libcrypto.h
src/: CMakeLists.txt  aes_cbc.c  pbkdf2.c  salt.c
test/: CMakeLists.txt  aes_cbc_test.c  pbkdf2_test.c  salt_test.c
